# charts.go
@@ -1,7 +1,11 @@
 package main
 
 import (
+	"encoding/json"
 	"fmt"
+	"io/ioutil"
+	"net/http"
+	"os"
 	"regexp"
 	"strings"
 
@@ -57,7 +61,7 @@ func showChart(c *gin.Context) {
 
 	client := action.NewShow(action.ShowAll)
 	client.Version = version
-	all := &showAll{}
+	all := &chartView{}
 	if info == string(action.ShowAll) {
 		client.OutputFormat = action.ShowAll
 	} else if info == string(action.ShowChart) {
@@ -140,41 +144,223 @@ func showChart(c *gin.Context) {
 	return
 }
 
-type showAll struct {
+type chartView struct {
 	Chart    chart.Metadata         `json:"chart"`
 	Values   map[string]interface{} `json:"values"`
 	Readme   string                 `json:"readme"`
 	Template []*file                `json:"template"`
 }
 
-// @Summary			显示chart的部署yaml
+// @Summary			显示chart解析后的k8s部署yaml
 // @Description 	显示chart的k8s部署yaml，如果多个文件则合并到一个yaml一起展示出来
 // @Tags			Chart
 // @Param 			chart query string true "chart名称"
 // @Success 		200 {object} respBody
 // @Router 			/charts/template [post]
 func showTemplate(c *gin.Context) {
-	// name := c.Query("chart")
-	// respOK(c, "haha")
+	// rel, err := runInstall(args, client, valueOpts, out)
+	// if err != nil && !settings.Debug {
+	// 	if rel != nil {
+	// 		respErr(c, errors.Errorf("%w\n\nUse --debug flag to render out invalid YAML", err))
+	// 		return
+	// 	}
+	// 	respErr(c, errors.Errorf(err))
+	// 	return
+	// }
+
+	// // We ignore a potential error here because, when the --debug flag was specified,
+	// // we always want to print the YAML, even if it is not valid. The error is still returned afterwards.
+	// if rel != nil {
+	// 	var manifests bytes.Buffer
+	// 	fmt.Fprintln(&manifests, strings.TrimSpace(rel.Manifest))
+	// 	if !client.DisableHooks {
+	// 		fileWritten := make(map[string]bool)
+	// 		for _, m := range rel.Hooks {
+	// 			if client.OutputDir == "" {
+	// 				fmt.Fprintf(&manifests, "---\n# Source: %s\n%s\n", m.Path, m.Manifest)
+	// 			} else {
+	// 				newDir := client.OutputDir
+	// 				if client.UseReleaseName {
+	// 					newDir = filepath.Join(client.OutputDir, client.ReleaseName)
+	// 				}
+	// 				err = writeToFile(newDir, m.Path, m.Manifest, fileWritten[m.Path])
+	// 				if err != nil {
+	// 					return err
+	// 				}
+	// 				fileWritten[m.Path] = true
+	// 			}
+
+	// 		}
+	// 	}
+
+	// 	// if we have a list of files to render, then check that each of the
+	// 	// provided files exists in the chart.
+	// 	if len(showFiles) > 0 {
+	// 		// This is necessary to ensure consistent manifest ordering when using --show-only
+	// 		// with globs or directory names.
+	// 		splitManifests := releaseutil.SplitManifests(manifests.String())
+	// 		manifestsKeys := make([]string, 0, len(splitManifests))
+	// 		for k := range splitManifests {
+	// 			manifestsKeys = append(manifestsKeys, k)
+	// 		}
+	// 		sort.Sort(releaseutil.BySplitManifestsOrder(manifestsKeys))
+
+	// 		manifestNameRegex := regexp.MustCompile("# Source: [^/]+/(.+)")
+	// 		var manifestsToRender []string
+	// 		for _, f := range showFiles {
+	// 			missing := true
+	// 			// Use linux-style filepath separators to unify user's input path
+	// 			f = filepath.ToSlash(f)
+	// 			for _, manifestKey := range manifestsKeys {
+	// 				manifest := splitManifests[manifestKey]
+	// 				submatch := manifestNameRegex.FindStringSubmatch(manifest)
+	// 				if len(submatch) == 0 {
+	// 					continue
+	// 				}
+	// 				manifestName := submatch[1]
+	// 				// manifest.Name is rendered using linux-style filepath separators on Windows as
+	// 				// well as macOS/linux.
+	// 				manifestPathSplit := strings.Split(manifestName, "/")
+	// 				// manifest.Path is connected using linux-style filepath separators on Windows as
+	// 				// well as macOS/linux
+	// 				manifestPath := strings.Join(manifestPathSplit, "/")
+
+	// 				// if the filepath provided matches a manifest path in the
+	// 				// chart, render that manifest
+	// 				if matched, _ := filepath.Match(f, manifestPath); !matched {
+	// 					continue
+	// 				}
+	// 				manifestsToRender = append(manifestsToRender, manifest)
+	// 				missing = false
+	// 			}
+	// 			if missing {
+	// 				return fmt.Errorf("could not find template %s in chart", f)
+	// 			}
+	// 		}
+	// 		for _, m := range manifestsToRender {
+	// 			fmt.Fprintf(out, "---\n%s\n", m)
+	// 		}
+	// 	} else {
+	// 		fmt.Fprintf(out, "%s", manifests.String())
+	// 	}
+	// }
+
+	// respErr(c, errors.Errorf(err))
 	// return
 }
 
-// @Summary			下载chart
-// @Description 	helm pull
+// @Summary			获取chart下载地址
+// @Description 	获取chart的下载地址
 // @Tags			Chart
-// @Param 			url body string true "chart的url"
+// @Param 			factor body downFactor true "带下载的chart路径信息"
 // @Success 		200 {object} respBody
 // @Router 			/charts/export [post]
 func exportChart(c *gin.Context) {
-	url := c.Query("url")
-	c.Header("Content-Type", "application/octet-stream")
-	c.Header("Content-Disposition", "attachment; filename="+url)
-	c.Header("Content-Transfer-Encoding", "binary")
-	c.Header("Cache-Control", "no-cache")
-	if len(url) == 0 {
-		respErr(c, errors.Errorf("no exist"))
+	//arg := c.Query("param")
+	// c.Header("Content-Type", "application/x-gtar")
+	// c.Header("Content-Disposition", "attachment; filename="+url)
+	// c.Header("Content-Transfer-Encoding", "binary")
+	// c.Header("Cache-Control", "no-cache")
+	// if len(url) == 0 {
+	// 	respErr(c, errors.Errorf("no exist"))
+	// 	return
+	// }
+	// c.File(url)
+	var factor downFactor
+	if c.Bind(&factor) != nil {
+		respErr(c, errors.Errorf("missing parameters"))
 		return
 	}
-	c.File(url)
+	bol, _ := regexp.MatchString(`^([hH][tT]{2}[pP]:\/\/|[hH][tT]{2}[pP][sS]:\/\/|www\.)(([A-Za-z0-9-~]+)\.)+([A-Za-z0-9-~\.\/])+(.tgz)$`, factor.ChartURL)
+	if bol {
+		// 是正常的可下载路径
+		respOK(c, factor.ChartURL)
+	} else {
+		// 非正常可下载路径
+		// 可能只有chart文件名，缺少仓库地址，添加上后再试试
+		respOK(c, factor.RepoURL+"/"+factor.ChartURL)
+	}
 	return
+}
+
+type downFactor struct {
+	RepoURL  string `json:"repoUrl"`
+	ChartURL string `json:"chartUrl"`
+}
+
+// @Summary			新建chart
+// @Description 	新建一个chart并上传至镜像库
+// @Tags			Chart
+// @Param			repoUrl query string true "chart仓库的上传地址"
+// @Param 			meta body chart.Metadata true "chart基本信息"
+// @Param 			readme query string true "chart的readme"
+// @Param 			values body map[string]interface{} true "chart的values"
+// @Param 			compose query string true "chart的k8s部署yaml"
+// @Success 		200 {object} respBody
+// @Router 			/charts/create [post]
+func createChart(c *gin.Context) {
+	var meta chart.Metadata
+	if err := c.BindJSON(&meta); err != nil {
+		respErr(c, err)
+		return
+	}
+	readme := c.Query("readme")
+	var values map[string]interface{}
+	if err := c.BindJSON(&values); err != nil {
+		respErr(c, err)
+		return
+	}
+	compose := c.Query("compose")
+
+	// 创建chart目录和文件
+	path := helmConfig.SnapPath + "/" + meta.Name
+	os.MkdirAll(path, 0755) //创建chart目录
+	//创建Chart.yaml
+	if file, err := os.Create(path + "/Chart.yaml"); err == nil {
+		data, _ := json.Marshal(meta)
+		file.Write(data)
+	}
+	//创建values.yaml
+	if file, err := os.Create(path + "/values.yaml"); err == nil {
+		data, _ := json.Marshal(values)
+		file.Write(data)
+	}
+	//创建readme.md
+	if file, err := os.Create(path + "/readme.md"); err == nil {
+		file.WriteString(readme)
+	}
+	os.MkdirAll(path+"/templates", 0755) //创建chart目录
+	//创建k8s-compose.yaml
+	if file, err := os.Create(path + "/templates/k8s-compose.yaml"); err == nil {
+		file.WriteString(compose)
+	}
+
+	repo := c.Query("repoUrl")
+	pushChart(path, repo)
+}
+
+//
+func updateChart(c *gin.Context) {
+
+}
+
+func pushChart(url string, arg ...string) error {
+	client := &http.Client{}
+	req, err := http.NewRequest(
+		"POST",
+		url,
+		strings.NewReader("name=abc"))
+	if err != nil {
+		return err
+	}
+	req.Header.Set("Content-Type", "application/x-www-form-urlencoded")
+	resp, err := client.Do(req)
+	if err != nil {
+		return err
+	}
+	defer resp.Body.Close()
+	_, err := ioutil.ReadAll(resp.Body)
+	if err != nil {
+		return err
+	}
 }
